# raydoum-amm-swap-example

./: Anchor.toml  package.json  sadasd.sh
local_accounts/: operator.json  position-owner.json
programs/amm-basein/: Cargo.toml
programs/amm-basein/src/: errors.rs  lib.rs
programs/amm-basein/src/instruction/: base_in.rs
programs/amm-basein/src/instructions/: flash_swap.rs  mod.rs  proxy_swap_base_in.rs  proxy_swap_dlmm copy.rs  proxy_swap_dlmm.rs
programs/amm-basein/src/utils/: flash_ixs.rs  ix_utils.rs  mod.rs
tests/: amm-basein.ts  config.ts  constants.ts  create_alpha_vault.ts  create_amm_pool.ts  create_market.ts  create_pool.test.ts  main.test.ts  seed_liquidity_single_bin.ts  swap.ts  swap_dlmm.ts  utils.ts
tests/instructions/: createDlmmSwapInstruction.ts  createRaydiumAmmSwapInstruction.ts  create_amm_pool.ts  create_market.ts  flash_swap.ts  swap.ts  swap_dlmm.ts
tests/libs/: config.ts  constants.ts  create_pool_utils.ts  create_token_mint.ts  math.ts  seed_liquidity_utils.ts  utils.ts
tests/utils/: getDlmmSwapArgs.ts  getRaydiumAmmSwapArgs.ts
