[package]
name = "amm-basein"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_basein"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "=0.29.0"
anchor-spl = "=0.29.0"
raydium-amm-cpi = { git = "https://github.com/phucvarmeta/raydium-cpi", package = "raydium-amm-cpi", branch = "fix/dependencies-version" }
ahash = "=0.8.4"
dlmm = { git = "https://github.com/phucvarmeta/dlmm-sdk", package = "lb_clmm", branch = "fix/dependencies-version-4", features = [
  "cpi",
] }
num_enum = "=0.7.0"
solana-program = "=1.16.17"

[patch.crates-io]
num_enum = { version = "0.7.0", package = "num_enum" }
solana-program = "=1.16.17"
ahash = "=0.8.4"
